--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.3.3
   vector_graphics: ^1.1.15
+  image_picker: ^0.8.7+5
+  camera: ^0.11.0+2
+  path_provider: ^2.1.5
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
@@ -25,6 +29,9 @@ flutter:
   assets:
     - assets/images/bookly.svg
     - assets/images/backgroundlogin.png
+    - assets/images/avatar.png
+    - assets/images/book_cover.png
+    - assets/images/background_wave.png
   fonts:
     - family: Plus Jakarta Sans
       fonts:
