--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,18 +7,19 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  camera: ^0.11.0+2
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.0
   google_fonts: ^6.2.1
   http: ^1.2.2
   image_picker: ^1.1.2
+  intl: ^0.20.1
+  path: ^1.9.0
+  path_provider: ^2.1.5
   provider: ^6.1.2
   shared_preferences: ^2.3.3
   vector_graphics: ^1.1.15
-  camera: ^0.11.0+2
-  path_provider: ^2.1.5
-  path: ^1.9.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
